# waxtablet

./: README.md  pyproject.toml
examples/: simple.py
src/waxtablet/: __init__.py  notebook_lsp.py  types.py
